# geo_pfn

./: .gitignore  AGENTS.md  CLAUDE.md  pyproject.toml
.github/instructions/: branch-and-pr-workflow.instructions.md  implementation-and-tests.instructions.md  repository-doc-boundaries.instructions.md  shell-environment.instructions.md
docs/: geo-scm-design.md  geopfn-design.html  geopfn-hypothesis-results.md  geopfn-viz.html  haneda-experiment-plan.md  haneda-report.html  haneda-su-analysis.md  haneda-su-dataset.md  minipfn-report.html  model-comparison-report.html  model-comparison.md  prior-realism-diagnostic.md  scm-swap.html  session-handoff-2026-07-08.md  session-handoff-2026-07-10.md  sparse-best-models.html  sparse-context-results.html  stage-report.html  su-grid-geology-ablation.html  su-prediction-comparison.html  tabpfn-missing-features-analysis.md  uncertainty-sparse.html
results/haneda/: ablation.json  anchor.json  anchor_geopfn_coherent_su_l.json  anchor_geopfn_coherent_su_lcsg.json  anchor_geopfn_coherent_wn_lcsg.json  anchor_geopfn_su_l.json  anchor_geopfn_su_lcsg.json  anchor_geopfn_wn_lcsg.json  anchor_soil.json  anchor_su_l.json  anchor_tabicl_soil.json  anchor_tabicl_su_l.json  anchor_tabicl_su_lcsg.json  anchor_tabicl_wn_lcsg.json  anchor_wn_lcsg.json  context.json  finetune-grouped.json  finetune-rowrand.json  holdout_ablate_p00.json  holdout_ablate_p10.json  holdout_gen_17m.json  holdout_gen_17m_48k.json  holdout_gen_2m_24k.json  holdout_gen_2m_48k.json  holdout_gen_40m.json  holdout_gen_40m_48k.json  holdout_new2m.json  holdout_old.json  (+15 more)
(+72 files in other folders)
