[project]
name = "geo-pfn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "TsumiNa", email = "liu.chang.1865@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
geo-pfn = "geo_pfn:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
