[project]
name = "geo-pfn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "TsumiNa", email = "liu.chang.1865@gmail.com" }]
requires-python = ">=3.11, <3.15"
dependencies = [
    "numpy>=2.4.6",
    "scikit-learn>=1.9.0",
    "torch>=2.12.1",
]

[project.scripts]
geo-pfn = "geo_pfn:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "tabpfn>=8.0.8",
]
